Agregada la implementacion del adapter y el view holder asi como del activity para el recyclerview

--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -5,6 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="2dp"
+    android:layout_marginHorizontal="4dp"
+    android:layout_marginBottom="2dp"
     android:elevation="16dp"
     app:cardCornerRadius="16dp">
 
@@ -53,6 +56,9 @@
             android:layout_height="wrap_content"
             style="?attr/ratingBarStyleSmall"
             android:layout_marginTop="4dp"
+            android:numStars="5"
+            android:rating="0"
+            android:stepSize="0.1"
             app:layout_constraintStart_toStartOf="@id/tvTitle"
             app:layout_constraintTop_toBottomOf="@id/tvCategory" />
 
@@ -88,6 +94,7 @@
             android:layout_marginBottom="4dp"
             app:layout_constraintEnd_toEndOf="@id/tvTitle"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="@string/icon_description"
             android:src="@drawable/ic_add"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
