--- a/app/src/main/res/layout/item_expose_product_catalog.xml
+++ b/app/src/main/res/layout/item_expose_product_catalog.xml
@@ -62,6 +62,7 @@
                 android:layout_marginTop="2dp"
                 android:layout_marginHorizontal="4dp"
                 android:textAppearance="?attr/textAppearanceCaption"
+                android:textStyle="bold"
                 android:textColor="@color/color_primary"
                 app:layout_constraintTop_toBottomOf="@id/tvTitle"
                 app:layout_constraintStart_toStartOf="@id/cvThumbnail"
