--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,7 @@
     <color name="color_primary_variant">@color/orange_800</color>
     <color name="color_on_primary">@color/white</color>
 
-    <color name="color_secondary">#e0e0e0</color>
-    <color name="color_secondary_variant">#aeaeae</color>
+    <color name="color_secondary">@color/grey_400</color>
+    <color name="color_secondary_variant">@color/grey_500</color>
+    <color name="color_on_secondary">@color/orange_600</color>
 </resources>
