Terminada pantalla de agregar al carro

--- a/app/src/main/res/drawable/drw_color_layout_orange.xml
+++ b/app/src/main/res/drawable/drw_color_layout_orange.xml
@@ -4,5 +4,6 @@
     android:shape="rectangle">
 
     <corners android:radius="@dimen/view_radius_8"/>
-    <solid android:color="@color/color_primary"/>
+    <solid android:color="@color/orange_600"/>
+
 </shape>
