--- a/app/src/main/res/layout/item_expose_product_catalog.xml
+++ b/app/src/main/res/layout/item_expose_product_catalog.xml
@@ -36,7 +36,7 @@
                     android:scaleType="centerCrop"
                     android:src="@drawable/ic_no_photo"
                     tools:src="@drawable/ropa_default"
-                    android:contentDescription="@string/thumbnail_description"/>
+                    android:contentDescription="@string/image_view_thumbnail_description"/>
 
             </androidx.cardview.widget.CardView>
 
@@ -82,7 +82,7 @@
                     android:layout_height="16dp"
                     android:layout_margin="2dp"
                     android:padding="2dp"
-                    android:contentDescription="@string/icon_description"
+                    android:contentDescription="@string/image_view_icon_description"
                     android:src="@drawable/ic_favorite_unchecked"
                     app:tint="@color/color_primary" />
 
