--- a/app/src/main/res/layout/item_manage_product_list.xml
+++ b/app/src/main/res/layout/item_manage_product_list.xml
@@ -27,7 +27,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:src="@drawable/ic_no_photo"
-            android:contentDescription="@string/thumbnail_description"/>
+            android:contentDescription="@string/image_view_thumbnail_description"/>
 
         <TextView
             android:id="@+id/tvTitle"
@@ -97,7 +97,7 @@
             android:layout_marginBottom="4dp"
             app:layout_constraintEnd_toEndOf="@id/tvTitle"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:contentDescription="@string/icon_description"
+            android:contentDescription="@string/image_view_icon_description"
             android:src="@drawable/ic_add"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
