Pantalla de categorias terminada

--- a/app/src/main/res/layout/item_manage_product.xml
+++ b/app/src/main/res/layout/item_manage_product.xml
@@ -12,7 +12,7 @@
     android:layout_marginHorizontal="4dp"
     android:layout_marginBottom="2dp"
     android:elevation="16dp"
-    app:cardCornerRadius="16dp">
+    app:cardCornerRadius="@dimen/card_view_radius_default">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
