--- a/app/src/main/res/drawable/drw_size_layout_inactive.xml
+++ b/app/src/main/res/drawable/drw_size_layout_inactive.xml
@@ -5,6 +5,6 @@
 
     <corners android:radius="@dimen/view_radius_8"/>
     <solid android:color="@color/white"/>
-    <stroke android:color="@color/color_secondary" android:width="@dimen/view_border_1"/>
+    <stroke android:color="@color/color_secondary_variant" android:width="@dimen/view_border_1"/>
 
 </shape>
