--- a/app/src/main/res/layout/fragment_detail_product_catalog.xml
+++ b/app/src/main/res/layout/fragment_detail_product_catalog.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="@string/image_view_thumbnail_description"
-        android:src="@drawable/ropa_default"
+        android:src="@drawable/cloth_women_thumbnail_default"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -173,7 +173,7 @@
                     android:id="@+id/tvSizeMedium"
                     android:text="@string/text_size_medium_value"
                     android:textAppearance="?attr/textAppearanceCaption"
-                    android:textColor="@color/color_secondary"
+                    android:textColor="@color/color_secondary_variant"
                     android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -196,7 +196,7 @@
                     android:id="@+id/tvSizeLarge"
                     android:text="@string/text_size_large_value"
                     android:textAppearance="?attr/textAppearanceCaption"
-                    android:textColor="@color/color_secondary"
+                    android:textColor="@color/color_secondary_variant"
                     android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -219,7 +219,7 @@
                     android:id="@+id/tvSizeExtraLarge"
                     android:text="@string/text_size_extra_large_value"
                     android:textAppearance="?attr/textAppearanceCaption"
-                    android:textColor="@color/color_secondary"
+                    android:textColor="@color/color_secondary_variant"
                     android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
