--- a/app/src/main/res/layout/item_expose_product_catalog.xml
+++ b/app/src/main/res/layout/item_expose_product_catalog.xml
@@ -10,10 +10,10 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
-        android:layout_height="240dp"
-        android:elevation="16dp"
-        android:layout_margin="4dp"
-        app:cardCornerRadius="8dp">
+        android:layout_height="@dimen/card_view_expose_product_height"
+        android:elevation="@dimen/view_elevation_8"
+        android:layout_margin="@dimen/view_margin_2"
+        app:cardCornerRadius="@dimen/card_view_radius_min">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -27,15 +27,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:cardElevation="0dp"
-                app:cardCornerRadius="8dp">
+                app:cardCornerRadius="@dimen/card_view_radius_min">
 
                 <ImageView
                     android:id="@+id/imvThumbnail"
-                    android:layout_width="150dp"
-                    android:layout_height="175dp"
+                    android:layout_width="@dimen/image_view_thumbnail_expose_product_width"
+                    android:layout_height="@dimen/image_view_thumbnail_expose_product_height"
                     android:scaleType="centerCrop"
                     android:src="@drawable/ic_no_photo"
-                    tools:src="@drawable/ropa_default"
+                    tools:src="@drawable/cloth_women_thumbnail_default"
                     android:contentDescription="@string/image_view_thumbnail_description"/>
 
             </androidx.cardview.widget.CardView>
@@ -45,8 +45,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 tools:text="Mens Cotton Candy Jacket"
-                android:layout_marginTop="2dp"
-                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="@dimen/view_margin_1"
+                android:layout_marginHorizontal="@dimen/view_margin_2"
                 android:textAppearance="?attr/textAppearanceBody2"
                 android:maxLines="2"
                 android:ellipsize="end"
@@ -59,8 +59,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 tools:text="S/ 37.50"
-                android:layout_marginTop="2dp"
-                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="@dimen/view_margin_1"
+                android:layout_marginHorizontal="@dimen/view_margin_2"
                 android:textAppearance="?attr/textAppearanceCaption"
                 android:textStyle="bold"
                 android:textColor="@color/color_primary"
@@ -73,22 +73,20 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginEnd="4dp"
-                android:layout_marginTop="4dp"
-                app:cardCornerRadius="16dp">
+                android:layout_marginEnd="@dimen/view_margin_2"
+                android:layout_marginTop="@dimen/view_margin_2"
+                app:cardCornerRadius="@dimen/view_radius_8">
 
                 <ImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:layout_margin="2dp"
-                    android:padding="2dp"
+                    android:layout_width="@dimen/image_view_icon_favorite_size"
+                    android:layout_height="@dimen/image_view_icon_favorite_size"
+                    android:layout_margin="@dimen/view_margin_1"
+                    android:padding="@dimen/view_padding_1"
                     android:contentDescription="@string/image_view_icon_description"
                     android:src="@drawable/ic_favorite_unchecked"
                     app:tint="@color/color_primary" />
 
             </androidx.cardview.widget.CardView>
-
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
