--- a/app/src/main/res/layout/fragment_checkout_product_cart.xml
+++ b/app/src/main/res/layout/fragment_checkout_product_cart.xml
@@ -5,21 +5,108 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_secondary"
     tools:context=".ui.view.fragment.CheckoutProductCartFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCategory"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/color_secondary"
+        android:layout_marginTop="@dimen/view_margin_default"
+        android:layout_marginBottom="@dimen/view_margin_default"
         tools:listitem="@layout/item_checkout_product_cart"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tvSubtotalTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <TextView
+        android:id="@+id/tvSubtotalTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/text_subtotal_title"
+        android:textAppearance="?attr/textAppearanceBody2"
+        android:layout_marginBottom="@dimen/view_margin_min"
+        android:layout_marginHorizontal="@dimen/view_margin_default"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tvTaxesTitle"/>
 
+    <TextView
+        android:id="@+id/tvSubtotal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        tools:text="$ 435.95"
+        android:textAppearance="?attr/textAppearanceBody2"
+        android:textStyle="bold"
+        android:layout_marginBottom="@dimen/view_margin_min"
+        android:layout_marginHorizontal="@dimen/view_margin_default"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tvTaxesTitle"/>
+
+    <TextView
+        android:id="@+id/tvTaxesTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/text_taxes_title"
+        android:textAppearance="?attr/textAppearanceBody2"
+        android:layout_marginBottom="@dimen/view_margin_min"
+        android:layout_marginHorizontal="@dimen/view_margin_default"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tvTotalTitle"/>
+
+    <TextView
+        android:id="@+id/tvTaxes"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        tools:text="$ 65.50"
+        android:textAppearance="?attr/textAppearanceBody2"
+        android:textStyle="bold"
+        android:layout_marginBottom="@dimen/view_margin_min"
+        android:layout_marginHorizontal="@dimen/view_margin_default"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tvTotalTitle"/>
+
+    <TextView
+        android:id="@+id/tvTotalTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/text_total_title"
+        android:textAppearance="?attr/textAppearanceBody2"
+        android:layout_marginBottom="@dimen/view_margin_default"
+        android:layout_marginHorizontal="@dimen/view_margin_default"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btnPayOrder"/>
+
+    <TextView
+        android:id="@+id/tvTotal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        tools:text="$ 501.45"
+        android:textAppearance="?attr/textAppearanceBody2"
+        android:textStyle="bold"
+        android:layout_marginBottom="@dimen/view_margin_default"
+        android:layout_marginHorizontal="@dimen/view_margin_default"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btnPayOrder"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnPayOrder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_pay_order_description"
+        android:textAllCaps="false"
+        android:gravity="center"
+        app:cornerRadius="@dimen/view_radius_12"
+        android:paddingVertical="@dimen/view_padding_6"
+        app:icon="@drawable/ic_money"
+        app:iconGravity="textStart"
+        android:layout_marginHorizontal="@dimen/view_margin_default"
+        android:layout_marginTop="@dimen/view_margin_default"
+        android:layout_marginBottom="@dimen/view_margin_default"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <include
         android:id="@+id/lyProgressBar"
