--- a/app/src/main/res/layout/fragment_expose_category.xml
+++ b/app/src/main/res/layout/fragment_expose_category.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_secondary"
-    tools:context=".ui.view.fragment.ExposeProductCategoryFragment">
+    tools:context=".ui.view.fragment.ExposeCategoryFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCategory"
