Avance de catalogo de productos por categoria

--- a/app/src/main/res/layout/fragment_expose_product_catalog.xml
+++ b/app/src/main/res/layout/fragment_expose_product_catalog.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.view.fragment.MainCatalogFragment">
+    tools:context=".ui.view.fragment.ExposeProductCatalogFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvProduct"
