--- a/app/src/main/res/layout/layout_progress_bar.xml
+++ b/app/src/main/res/layout/layout_progress_bar.xml
@@ -8,12 +8,13 @@
 
     <ProgressBar
         android:id="@+id/pgLoading"
+        android:indeterminateTint="@color/color_primary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
