Mejorando navegacion entre fragmentos y avanzando detalle de producto

--- a/app/src/main/res/layout/fragment_detail_product_catalog.xml
+++ b/app/src/main/res/layout/fragment_detail_product_catalog.xml
@@ -326,4 +326,8 @@
 
     </com.google.android.material.card.MaterialCardView>
 
+    <include
+        android:id="@+id/lyProgressBar"
+        layout="@layout/layout_progress_bar"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
