Correcciones en las entidades y el repositorio

--- a/app/src/main/res/layout/fragment_detail_product_catalog.xml
+++ b/app/src/main/res/layout/fragment_detail_product_catalog.xml
@@ -149,6 +149,7 @@
                 <TextView
                     android:id="@+id/tvSizeSmall"
                     android:text="@string/text_size_small_value"
+                    android:tag="@string/text_size_small_value"
                     android:textAppearance="?attr/textAppearanceCaption"
                     android:textColor="@color/color_on_primary"
                     android:textStyle="bold"
@@ -172,6 +173,7 @@
                 <TextView
                     android:id="@+id/tvSizeMedium"
                     android:text="@string/text_size_medium_value"
+                    android:tag="@string/text_size_medium_value"
                     android:textAppearance="?attr/textAppearanceCaption"
                     android:textColor="@color/color_secondary_variant"
                     android:textStyle="bold"
@@ -195,6 +197,7 @@
                 <TextView
                     android:id="@+id/tvSizeLarge"
                     android:text="@string/text_size_large_value"
+                    android:tag="@string/text_size_large_value"
                     android:textAppearance="?attr/textAppearanceCaption"
                     android:textColor="@color/color_secondary_variant"
                     android:textStyle="bold"
@@ -218,6 +221,7 @@
                 <TextView
                     android:id="@+id/tvSizeExtraLarge"
                     android:text="@string/text_size_extra_large_value"
+                    android:tag="@string/text_size_extra_large_value"
                     android:textAppearance="?attr/textAppearanceCaption"
                     android:textColor="@color/color_secondary_variant"
                     android:textStyle="bold"
@@ -246,6 +250,7 @@
                 android:layout_marginEnd="@dimen/view_margin_min"
                 android:src="@drawable/ic_check"
                 app:tint="@color/color_on_primary"
+                android:tag="@string/text_color_red_value"
                 android:background="@drawable/drw_color_layout_red"
                 app:layout_constraintEnd_toStartOf="@id/imvColorBlue"
                 app:layout_constraintTop_toBottomOf="@id/tvTitleColor"
@@ -259,6 +264,7 @@
                 android:layout_marginTop="@dimen/view_margin_min"
                 android:layout_marginEnd="@dimen/view_margin_min"
                 app:tint="@color/color_on_primary"
+                android:tag="@string/text_color_blue_value"
                 android:background="@drawable/drw_color_layout_blue"
                 app:layout_constraintEnd_toStartOf="@id/imvColorGreen"
                 app:layout_constraintTop_toBottomOf="@id/tvTitleColor"
@@ -272,6 +278,7 @@
                 android:layout_marginTop="@dimen/view_margin_min"
                 android:layout_marginEnd="@dimen/view_margin_min"
                 app:tint="@color/color_on_primary"
+                android:tag="@string/text_color_green_value"
                 android:background="@drawable/drw_color_layout_green"
                 app:layout_constraintEnd_toStartOf="@id/imvColorOrange"
                 app:layout_constraintTop_toBottomOf="@id/tvTitleColor"
@@ -285,6 +292,7 @@
                 android:layout_marginTop="@dimen/view_margin_min"
                 android:layout_marginEnd="@dimen/view_margin_min"
                 app:tint="@color/color_on_primary"
+                android:tag="@string/text_color_orange_value"
                 android:background="@drawable/drw_color_layout_orange"
                 app:layout_constraintEnd_toStartOf="@id/imvColorPurple"
                 app:layout_constraintTop_toBottomOf="@id/tvTitleColor"
@@ -298,6 +306,7 @@
                 android:layout_marginTop="@dimen/view_margin_min"
                 android:layout_marginEnd="@dimen/view_margin_default"
                 app:tint="@color/color_on_primary"
+                android:tag="@string/text_color_purple_value"
                 android:background="@drawable/drw_color_layout_purple"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvTitleColor"
