--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <include
+        android:id="@+id/lyProgressBar"
+        layout="@layout/layout_progress_bar"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
